# claudetini

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RUN_INSTRUCTIONS.md  SECURITY.md  TESTING_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: done.md  gates.md  next.md  status.md
.claude/planning/: DISPATCH-UX-ISSUES.md  DISPATCH-UX-PLAN.md  OSS-RELEASE-CHECKLIST.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bounties.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/python-sidecar/: build_sidecar.py  pyproject.toml  requirements.txt  run.sh
app/python-sidecar/sidecar/: __init__.py
app/python-sidecar/sidecar/api/: server.py  ttl_cache.py
app/python-sidecar/sidecar/api/routes/: bootstrap.py  dispatch.py  dispatch_stream.py  gates.py  git.py  intelligence.py  live_sessions.py  logs.py  parallel.py  product_map.py  project.py  readiness.py  reconciliation.py  roadmap.py  settings.py  timeline.py
app/src/: App.tsx  AppRouter.tsx  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  CORE-MODULES.md  DATA-FLOWS.md  DESIGN-SYSTEM.md  FEATURES.md  FRONTEND.md  README.md  STATE-MANAGEMENT.md  test-fixtures.md
docs/views/: README.md  bootstrap.md  devlog-demo.md  dispatch.md  gates.md  git.md  logs.md  overlays.md  overview.md  parallel-execution.md  project-picker.md  recipe-cli-demo.md  reconciliation.md  roadmap.md  scorecard.md  settings.md  timeline.md
examples/: README.md  setup_demos.sh
examples/devlog/: .env.example  .gitignore  CLAUDE.md  README.md  config.example.py  pyproject.toml
examples/devlog/.claude/planning/: ROADMAP.md
examples/devlog/.github/workflows/: ci.yml
examples/devlog/devlog/: __init__.py  app.py  database.py  models.py
examples/devlog/devlog/routes/: entries.py  projects.py
examples/devlog/devlog/services/: entries.py  projects.py  reports.py
examples/devlog/devlog/utils/: cache.py  formatting.py  validation.py
examples/devlog/docs/: ARCHITECTURE.md
examples/devlog/tests/: conftest.py  test_database.py  test_entries_routes.py  test_entries_service.py  test_models.py  test_projects_routes.py  test_reports.py
examples/recipe-cli/: GETTING_STARTED.md  README.md  setup.py
src/: __init__.py
src/agents/: BOOTSTRAP_ENGINE.md  README_BOOTSTRAP.md  __init__.py  async_dispatcher.py  bootstrap_cli.py  bootstrap_engine.py  claude_agents.py  codex_dispatcher.py  dispatcher.py  executor.py  gates.py  gemini_dispatcher.py  hooks.py  parallel_orchestrator.py  parser.py  planning_agent.py  prompts.py  reconciliation_agent.py
src/core/: __init__.py  branch_strategy.py  cache.py  claude_md_manager.py  cost_tracker.py  dependency_analyzer.py  diff_summary.py  (+39 more)
templates/: doc_review.md  security_review.md  test_review.md
tests/: __init__.py  conftest.py  run_e2e.py  test_agent_parser.py  test_bootstrap_engine.py  test_branch_strategy.py  test_claude_agents.py  test_claude_md_manager.py  test_cost_tracker.py  test_dispatch_intents.py  test_dispatch_stream.py  test_dispatcher.py  test_executor.py  test_fallback_dispatch_helpers.py  test_fallback_dispatchers.py  test_gate_results.py  test_gate_trends.py  test_gates.py  test_git_utils.py  test_hooks.py  test_parallel_orchestrator.py  test_plan_scanner.py  test_planning_agent.py  test_preflight.py  test_prompt_history.py  test_provider_telemetry.py  test_provider_usage.py  test_recommender.py  test_retry.py  test_roadmap.py  test_scheduling.py  test_secrets_scanner.py  test_session_hooks.py  test_session_report.py  test_sessions.py  test_slash_commands.py  test_system_prompt.py  test_task_dependency.py  test_timeline.py  test_todos.py  (+2 more)
(+120 files in other folders)
