[project]
name = "claudetini-sidecar"
version = "0.1.0"
description = "Python backend sidecar for Claudetini"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
bundle = [
    "pyinstaller>=6.0",
]

[project.scripts]
claudetini-sidecar = "sidecar.api.server:main"
