[package]
name = "claudetini"
version = "0.1.0"
description = "Claudetini - Dashboard for Claude Code projects"
authors = ["Bryan Mendez (Cantina Digital)"]
edition = "2021"

[lib]
name = "claudetini_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
